@@ -1,3 +1,14 @@
+2013-04-23 Riccardo Mottola <rm@gnu.org>
+
+	* DBProgress.h
+	* DBProgress.m
+	ProgressIndicator setter and update.
+
+	* AppController.h
+	* AppController.m
+	* Resources/DataBasin.gorm
+	ProgressIndicator for Query.
+
 2013-04-14 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m (executeUpdate)
